# burn_raymarching

./: Cargo.toml  README.md  colmap_to_json.ts  generate_perfect_cameras.ts  log.txt  process_cameras.ts  process_video.sh  scene.json
data/: cameras.json
src/: camera.rs  dataset.rs  lib.rs  main.rs  renderer.rs  renderer_diff.rs  scene.rs  sdf.rs  training.rs  util.rs
src/model/: mod.rs  scene.rs  sdf.rs
