[package]
name = "burn_raymarching"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20", features = ["wgpu", "autodiff"] }
serde = { version = "1.0", features = ["derive"] }
image = "0.25"
serde_json = "1.0.149"
winit = "0.30.12"
wgpu = "28.0.0"
bytemuck = "1.25.0"
pollster = "0.4.0"
env_logger = "0.11.9"
log = "0.4.29"
